# onnx-ir-rust

./: CONTRIBUTING.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_STATUS.md  README.md
.github/workflows/: ci.yml  docs.yml  lint.yml  msrv.yml  security.yml
crates/onnx-ir-core/: Cargo.toml
crates/onnx-ir-core/src/: attribute.rs  enums.rs  function.rs  graph.rs  lib.rs  linked_list.rs  metadata.rs  model.rs  name_authority.rs  node.rs  shape.rs  tensor.rs  types.rs  value.rs
crates/onnx-ir-core/tests/: integration_test.rs
crates/onnx-ir-py/: Cargo.toml
crates/onnx-ir-py/src/: lib.rs
