[package]
name = "onnx-ir-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core intermediate representation for ONNX in Rust"

[dependencies]
prost.workspace = true
prost-types.workspace = true
indexmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
